--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-#Node
-node_modules/
+#Dependencies
+node_modules
+npm-debug.log
+yarn-error.log
+yarn.lock
+.yarnclean
+.vscode
+
+# Production
+dist
 
 # General
 .DS_Store
