--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "react-starter",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "author": "Rui Domingues",
+  "dependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-hot-loader": "^4.12.19",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
+  }
 }
