--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
     "react-hot-loader": "^4.12.19",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "concurrently": "^5.1.0",
+    "rimraf": "^3.0.2"
   }
 }
