--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "author": "Rui Domingues",
+  "scripts": {
+    "start": "webpack-dev-server --config webpack/webpack.config.dev.js",
+    "build": "rimraf ./dist && NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
+    "start:prod": "npx http-server dist"
+  },
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.19",
+    "@hot-loader/react-dom": "^16.12.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
@@ -15,8 +21,27 @@
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.1.0",
-    "rimraf": "^3.0.2"
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.2",
+    "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.6",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   }
 }
