--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,10 @@
     "react/jsx-filename-extension": 0
   },
   "parserOptions": {
-    "sourceType": "module"
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   }
 }
