--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start:prod": "npx http-server dist"
   },
   "dependencies": {
+    "autoprefixer": "^9.7.4",
+    "@hot-loader/react-dom": "^16.12.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.19",
-    "@hot-loader/react-dom": "^16.12.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
@@ -36,8 +37,11 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
