--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "webpack-dev-server --config webpack/webpack.config.dev.js",
     "build": "rimraf ./dist && NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
     "start:prod": "npx http-server dist",
-    "deploy": "yarn build && gh-pages -d dist"
+    "deploy": "yarn build && gh-pages -d dist",
+    "analyze": "source-map-explorer 'dist/*.js'"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.12.0",
@@ -27,7 +28,6 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
@@ -38,13 +38,17 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "fontmin-webpack": "^2.0.6",
     "gh-pages": "^2.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "3.0.7",
+    "json-server": "^0.16.1",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
+    "source-map-explorer": "^2.3.1",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
